added headers, intro text formatting

--- a/_temp.htm
+++ b/_temp.htm
@@ -1,13 +1,21 @@
-<html><head></head><body><h1>My document&apos;s title</h1><p>A paragraph in my docume</p><template class="header"><span></span></template><template class="footer"><style type="text/css">.pdfheader {
-  font-size: 10px;
-  font-family: Helvetica;
-  font-weight: bold;
-  width: 1000px;
-  border-top: 1px solid black;
-  margin-left: 10%;
-  margin-right: 10%;
-  padding-top: 1mm;
-  margin-bottom: -1mm;
-  text-align: center;
-}
-</style><div class="pdfheader">Page <span class="pageNumber"></span> / <span class="totalPages"></span></div></template><style></style></body></html>
+<html><head></head><body><div class="headers"><h1 id="header">Information &amp; Systems Security Society</h1><h3>2018-2019 Sponsorship Guide</h3></div><div class="main-text"><img src="transparent.png"><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  towards  instructing  students  on  the topics of computer security. Through our organization&#x2019;s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
+</div><style>@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
+body {
+  background: #202020;
+  color: white;
+  font-family: "Trebuchet MS", Helvetica, sans-serif; }
+
+#header {
+  padding-top: 1cm;
+  font-weight: bold; }
+
+.headers {
+  padding-left: 1cm;
+  margin-bottom: .5cm; }
+
+.main-text {
+  margin-right: 2cm; }
+  .main-text img {
+    float: left;
+    margin: 0px 0px 15px 15px; }
+</style></body></html>
