--- a/_temp.htm
+++ b/_temp.htm
@@ -1,4 +1,5 @@
 <html><head></head><body><div class="headers"><h1 id="header">Information &amp; Systems Security Society</h1><h3>2018-2019 Sponsorship Guide</h3></div><div class="main-text"><img src="transparent.png"><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  towards  instructing  students  on  the topics of computer security. Through our organization&#x2019;s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
+<p>ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body. Job listings and opportunities will be distributed directly to organization members, and companies will have access to resumes from students pursuing careers in cybersecurity.</p>
 </div><style>@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
 body {
   background: #202020;
@@ -14,8 +15,13 @@ body {
   margin-bottom: .5cm; }
 
 .main-text {
-  margin-right: 2cm; }
+  margin-right: 1.25cm; }
   .main-text img {
     float: left;
-    margin: 0px 0px 15px 15px; }
+    margin: 0px 0px 0px 15px; }
+
+p {
+  margin-top: 10px;
+  margin-left: 1cm;
+  margin-right: 1.75cm; }
 </style></body></html>
