--- a/isss_prospectus_temp.htm
+++ b/isss_prospectus_temp.htm
@@ -13,14 +13,12 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 </div></div><div class="container1"><div class="col1"><h3>Capture the Flag (CTF)</h3>
 <p><span style="color:#c6ecd6">70+ Students, 2 Hours</span></p>
 </div><div class="col2"><p><span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. ISSS writes, hosts, and caters CTF challenges every two weeks.</span></p>
-</div></div></div><h1 id="Event-header">Special Events</h1><div class="container2"><div class="container1"><div class="col1"><h3>Fall Networking Dinner*</h3>
-<p><span style="color:#c6ecd6">70+ Students, 2 Hours</span></p>
-</div><div class="col2"><p><span style = "text-align: justify">The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.</span></p>
-</div></div><div class="container1"><div class="col1"><h3>ISSSCTF†</h3>
-<p><span style="color:#c6ecd6">300+ Students, 3+ Hours</span></p>
-</div><div class="col2"><p><span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on October 20-21 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span></p>
-</div></div><div class="container1"><div class="col1"><h3>Security Day†</h3>
-<p><span style="color:#c6ecd6">130+ Students, 8 Hours</span></p>
+</div></div></div><h1 id="Event-header">Special Events</h1><div class="container2"><div class="container1"><div class="col1"><h3>Fall Networking Dinner<span style="font-size:12">*</span></h3>
+<span style="color:#c6ecd6">70+ Students, 2 Hours</span></div><div class="col2"><p><span style = "text-align: justify">The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.</span></p>
+</div></div><div class="container1"><div class="col1"><h3>ISSSCTF<span style="font-size:10">†</span></h3>
+<span style="color:#c6ecd6">300+ Students, 3+ Hours</span></div><div class="col2"><p><span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on October 20-21 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span></p>
+</div></div><div class="container1"><div class="col1"><h3>Security Day<span style="font-size:10">†</span></h3>
+<span style="color:#c6ecd6">130+ Students, 8 Hours</span>  
 </div><div class="col2"><p><span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted during the spring semester in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span></p>
 </div></div></div><h1 id="Sponsor-header">Sponsorship Levels</h1><div class="Table"><table><thead><tr><th> <center><h2><strong>Level</strong></h2>
 </center></th><th><center><h2><strong>Benefits</strong></h2>
@@ -29,7 +27,7 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 <p><span style="color:#D4AF37">$3,000</span></p>
 </center></td><td> <left><ul>
 <li>Host a CTF Competition OR a Custom Event</li>
-<li>Invitation to Networking Dinner (up to 4 representatives)*</li>
+<li>Invitation to Networking Dinner (up to 4 representatives)<span style="font-size:12">*</span></li>
 <li>All benefits of the Silver level</li>
 </ul>
 </left></td><td><center><h2>1<sup>st</sup></h2>
@@ -40,10 +38,10 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 <p>Host a catered General Meeting (technical talk) OR Workshop</p>
 </li>
 <li>
-<p>Invitation to Fall Networking Dinner (up to 2 representatives)*</p>
+<p>Invitation to Fall Networking Dinner (up to 2 representatives)<span style="font-size:12">*</span></p>
 </li>
 <li>
-<p>Provide a company presence during Security Day†</p>
+<p>Provide a company presence during Security Day<span style="font-size:10">†</span></p>
 </li>
 <li>
 <p>Recognition on ISSS T-Shirts and Security Day marketing materials</p>
@@ -65,14 +63,12 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 <li>Access to community resumes</li>
 </ul>
 </left></td><td> <center><h2>N/A</h2>
-</center></td></tr></tbody></table></div><div class="Footnote"><p>* Fall semester only
+</center></td></tr></tbody></table></div><div class="Footnote"><p>*   Fall semester only
 <br />
-† Spring semester only</p>
+†   Spring semester only</p>
 </div><div class="Info"><h3>For more information, and to become a sponsor, contact us at <a href="mailto:corporate@isss.io">corporate@isss.io</a>. Visit our website at <a href="https://www.isss.io/">isss.io</a> for the latest organization news and information.</h3>
-</div><div class="Terms"><p><em>Please Note:</em> Sponsorship runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin over the Winter
-(consisting of the following Spring and Fall semesters) or over the Summer (consisting of the following Fall and Spring semesters).
-ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are
-expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices
+</div><div class="Terms"><p><em>Please Note:</em> Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
+either the fall or spring semester, and will encompass that current semester and the one proceeding it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors areexpected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices
 are subject to change every academic year.</p>
 </div><h1 id="FAQ">FAQ</h1><div class="EOP"> <h1>Last Page. Run the Python Script. Python delete_page.py</h1></div><style>@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
 @import url("https://fonts.googleapis.com/css?family=Roboto");
