--- a/isss_prospectus_temp.htm
+++ b/isss_prospectus_temp.htm
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         
       </head>
-      <body> <div class="headers"><h1 id="header">Information & Systems Security Society</h1><h2>2018-2019 Sponsorship Guide</h2></div><div class="main-text"><img src="transparent.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
+      <body> <div class="headers"><h1 id="header">Information & Systems Security Society</h1><h2>2019-2020 Sponsorship Guide</h2></div><div class="main-text"><img src="transparent.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
 <p>ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.</p>
 </div><h1 id="Event-header">Weekly Events </h1><div class="container2"><div class="container1"><div class="col1"><h3>General Meetings</h3>
 <p><span style="color:#c6ecd6">40+ Students, 1 Hour</span></p>
@@ -15,8 +15,8 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 </div><div class="col2"><p><span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. ISSS writes, hosts, and caters CTF challenges every two weeks.</span></p>
 </div></div></div><h1 id="Event-header">Special Events</h1><div class="container2"><div class="container1"><div class="col1"><h3>Fall Networking Dinner<span style="font-size:12">*</span></h3>
 <span style="color:#c6ecd6">70+ Students, 2 Hours</span></div><div class="col2"><p><span style = "text-align: justify">The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.</span></p>
-</div></div><div class="container1"><div class="col1"><h3>ISSSCTF<span style="font-size:10">†</span></h3>
-<span style="color:#c6ecd6">300+ Students, 3+ Hours</span></div><div class="col2"><p><span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on October 20-21 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span></p>
+</div></div><div class="container1"><div class="col1"><h3>ISSSCTF<span style="font-size:12">*</span></h3>
+<span style="color:#c6ecd6">300+ Students, 3+ Hours</span></div><div class="col2"><p><span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on November 2-3 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span></p>
 </div></div><div class="container1"><div class="col1"><h3>Security Day<span style="font-size:10">†</span></h3>
 <span style="color:#c6ecd6">130+ Students, 8 Hours</span>  
 </div><div class="col2"><p><span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted during the spring semester in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span></p>
@@ -67,8 +67,8 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 <br />
 †   Spring semester only</p>
 </div><div class="Info"><h3>For more information, and to become a sponsor, contact us at <a href="mailto:corporate@isss.io">corporate@isss.io</a>. Visit our website at <a href="https://www.isss.io/">isss.io</a> for the latest organization news and information.</h3>
-</div><div class="Terms"><p><em>Please Note:</em> Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
-either the fall or spring semester, and will encompass that current semester and the one proceeding it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors areexpected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices
+</div><div class="FOCS"><span style="font-size=6">FoCS: Non-sponsor Friends of Computer Science members are invited to host a [general meeting/tech talk (with dinner)/social corporate dinner] based on availability, ancillary catering costs not included.</span></div><div class="Terms"><p><em>Please Note:</em> Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
+either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices
 are subject to change every academic year.</p>
 </div><h1 id="FAQ">FAQ</h1><div class="EOP"> <h1>Last Page. Run the Python Script. Python delete_page.py</h1></div><style>@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
 @import url("https://fonts.googleapis.com/css?family=Roboto");
@@ -176,20 +176,28 @@ td {
 #FAQ {
   page-break-before: always; }
 
-.Footnote {
+.FOCS {
+  font-size: 10;
+  padding-left: 1.5cm;
+  padding-right: 1.5cm;
+  text-align: center;
   padding-top: 1cm;
+  padding-bottom: -1cm; }
+
+.Footnote {
+  padding-top: 0.5cm;
   text-align: left;
   padding-left: 2cm;
   padding-right: 1.75cm; }
 
 .Info {
-  padding-top: 1cm;
+  padding-top: 0.5cm;
   text-align: center;
   padding-left: 2cm;
   padding-right: 1.75cm; }
 
 .Terms {
-  padding-top: 1cm;
+  padding-top: 0.5cm;
   padding-left: 1.5cm;
   padding-right: 1.5cm;
   page-break-after: always;
