--- a/isss_prospectus_temp.htm
+++ b/isss_prospectus_temp.htm
@@ -2,9 +2,9 @@
     <html>
       <head>
         <meta charset="UTF-8">
-        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css"></link>
       </head>
-      <body> <div class="headers"><img src="logo.png" height="40" marginTop="10"/><h2>Information & Systems<br />Security Society 2019-2020 Sponsorship Guide</h2></div><div class="main-text"><img src="transparent.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
+      <body> <div class="headers"><img src="logo.png" height="40" marginTop="10"/><h2>Information & Systems<br />Security Society 2020-2021 Sponsorship Guide</h2></div><div class="main-text"><img src="transparent.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
 <p>ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.</p>
 </div><h1 id="Event-header">Weekly Events </h1><div class="container2"><div class="container1"><div class="col1"><h3>General Meetings</h3>
 <p><span style="color:#c6ecd6">40+ Students, 1 Hour</span></p>
@@ -68,8 +68,7 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 †   Spring semester only</p>
 </div><div class="Info"><h3>For more information, and to become a sponsor, contact us at <a href="mailto:corporate@isss.io">corporate@isss.io</a>. Visit our website at <a href="https://www.isss.io/">isss.io</a> for the latest organization news and information.</h3>
 </div><div class="FOCS"><span style="font-size=9">FoCS: Non-sponsor Friends of Computer Science members are invited to host a tech talk (with dinner) based on availability,<br />ancillary catering costs not included.</span></div><div class="Terms"><p><em>Please Note:</em> Sponsorship generally runs on a yearly schedule consisting of two academic semesters. Sponsorship can begin around the start of
-either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Sponsorship levels, benefits, and prices
-are subject to change every academic year.</p>
+either the fall or spring semester, and will encompass that current semester and the one following it. ISSS must receive sponsorship funds prior to sponsors participating in any ISSS events. General meetings hosted by sponsors are expected to be educational, respectful of students’ time, and technical in nature. Semester-long sponsorship options are also available upon request.</p>
 </div><h1 id="FAQ">FAQ</h1><div class="EOP"> <h1>Last Page. Run the Python Script. Python delete_page.py</h1></div><style>@import 'https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.0/semantic.min.css';
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @page {
