update for 2021-2022 school year

--- a/isss_prospectus_temp.htm
+++ b/isss_prospectus_temp.htm
@@ -4,19 +4,19 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css"></link>
       </head>
-      <body> <div class="headers"><img src="logo.png" height="40" marginTop="10"/><h2>Information & Systems<br />Security Society 2020-2021 Sponsorship Guide</h2></div><div class="main-text"><img src="transparent.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
+      <body> <div class="headers"><img src="dept.png" height="40" marginTop="10"/><h2>Information & Systems<br />Security Society 2021-2022 Sponsorship Guide</h2></div><div class="main-text"><img src="isss-logo-white.png"/><p>The Information and Systems Security Society (ISSS) is a student run Computer Science organization  at  the  University  of  Texas  at Austin  dedicated  to  instructing  students  on  the topics of computer security. Through our organization’s events and mentorship program, students are given exposure to both practical and theoretical attacks on real world systems, encouraging students to write better code, design better infrastructure, and defend their privacy and digital freedom in an increasingly connected world.</p>
 <p>ISSS is seeking corporate sponsors to help fund and host organization events, and to educate students on applications of security in the industry. Through sponsorship, companies can broaden their outreach in the community through hosted events and recruiting opportunities while receiving name recognition within the student body.</p>
 </div><h1 id="Event-header">Weekly Events </h1><div class="container2"><div class="container1"><div class="col1"><h3>General Meetings</h3>
 <p><span style="color:#c6ecd6">40+ Students, 1 Hour</span></p>
-</div><div class="col2"><p><span style = "text-align: justify">ISSS hosts a general meeting or workshop every two weeks focusing on interesting security topics.<br>
+</div><div class="col2"><p><span style = "text-align: justify">ISSS hosts a general meeting or workshop every week focusing on interesting security topics.<br>
 Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span></p>
 </div></div><div class="container1"><div class="col1"><h3>Capture the Flag (CTF)</h3>
 <p><span style="color:#c6ecd6">70+ Students, 2 Hours</span></p>
 </div><div class="col2"><p><span style = "text-align: justify">Capture the Flag (CTF) competitions are security competitions designed to challenge students’ practical knowledge of system vulnerabilities in a simulated setting. ISSS writes, hosts, and caters CTF challenges every two weeks.</span></p>
 </div></div></div><h1 id="Event-header">Special Events</h1><div class="container2"><div class="container1"><div class="col1"><h3>Fall Networking Dinner<span style="font-size:12">*</span></h3>
 <span style="color:#c6ecd6">70+ Students, 2 Hours</span></div><div class="col2"><p><span style = "text-align: justify">The Fall Networking Dinner serves as a recruiting opportunity for companies seeking security-minded students, offering a platform for companies to discuss security topics with students in a relaxed environment.</span></p>
-</div></div><div class="container1"><div class="col1"><h3>ISSSCTF<span style="font-size:12">*</span></h3>
-<span style="color:#c6ecd6">300+ Students, 3+ Hours</span></div><div class="col2"><p><span style = "text-align: justify">ISSSCTF is a CTF competition put on during HackTX on November 2-3 in a collaborative effort with Freetail Hackers. Much like the biweekly CTFs, the ISSS officer team creates and writes the CTF challenges.</span></p>
+</div></div><div class="container1"><div class="col1"><h3>UTCTF<span style="font-size:12">†</span></h3>
+<span style="color:#c6ecd6">8,000+ Participants, 3 Days</span></div><div class="col2"><p><span style = "text-align: justify">UTCTF is an annual CTF hosted by ISSS. The event takes place during the Spring semester and is attended by several thousand participants from around the world.</span></p>
 </div></div><div class="container1"><div class="col1"><h3>Security Day<span style="font-size:10">†</span></h3>
 <span style="color:#c6ecd6">130+ Students, 8 Hours</span>  
 </div><div class="col2"><p><span style = "text-align: justify">Security Day is a day-long cybsersecurity focused student event hosted during the spring semester in conjunction with the Department of Computer Science that features several technical talks given by Gold/Silver sponsors and a CTF Competition.</span></p>
@@ -26,7 +26,7 @@ Previous topics have included ROP, Burp Suite, CSRF, and Meltdown/Spectre.</span
 </center></th></tr></thead><tbody><tr><td> <center><h2><span style="color:#D4AF37">Gold</span></h2>
 <p><span style="color:#D4AF37">$3,000</span></p>
 </center></td><td> <left><ul>
-<li>Host a CTF Competition OR a Custom Event</li>
+<li>Host a CTF Competition or Custom Event</li>
 <li>Invitation to Networking Dinner (up to 4 representatives)<span style="font-size:12">*</span></li>
 <li>All benefits of the Silver level</li>
 </ul>
